fixed images being cropped

--- a/project/project7/projectstyles.css
+++ b/project/project7/projectstyles.css
@@ -366,11 +366,10 @@ figcaption {
     width: 100%;
     margin: 0;
 }
-/* Making the banner image full width with a fixed height */
+/* Making the banner image full width */
 .banner-img {
     width: 100%;
-    height: 280px;
-    object-fit: cover;
+    height: auto;
     display: block;
     opacity: 0.65;
 }
